update: enhance pytest configuration and improve CSS styles for better report presentation

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,9 @@
 [pytest]
 addopts = 
+    --html=report.html
+    --self-contained-html
+    --css=assets/style.css
+    --capture=sys
+    --show-capture=all
+    --verbose
+    --tb=long 
