update: enhance pytest configuration, add screenshot and video support, and improve UI test file upload with screenshots

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,4 +6,8 @@ addopts =
     --capture=sys
     --show-capture=all
     --verbose
-    --tb=long 
+    --tb=long
+    --screenshot=only-on-failure
+    --video=on
+    --video-encoding=vp9
+    --video-quality=medium 
