feat: add Playwright configuration and fixtures for video recording and browser context settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,9 @@ addopts =
     --verbose
     --tb=long
     --screenshot=only-on-failure
-    --video=on
-    --video-encoding=vp9
-    --video-quality=medium 
+
+[playwright]
+video = on
+video_size = {"width": 1280, "height": 720}
+video_encoding = vp9
+video_quality = medium 
