--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -88,10 +88,11 @@ jobs:
 
             # Create TRX structure
             log('Creating TRX structure...')
+            current_time = datetime.now().strftime('%Y-%m-%d %H:%M:%S')
             trx = {
                 'TestRun': {
                     'id': str(datetime.now().timestamp()),
-                    'name': f'GitHub Actions Test Run - {datetime.now().strftime("%Y-%m-%d %H:%M:%S")}',
+                    'name': f'GitHub Actions Test Run - {current_time}',
                     'times': {
                         'creation': datetime.now().isoformat(),
                         'start': datetime.now().isoformat(),
